Clean up index.pug

--- a/src/html/app/index.pug
+++ b/src/html/app/index.pug
@@ -1,7 +1,7 @@
 doctype html
 html
   head
-    title Innovator's DNA
+    title LOL Addiction Recovery
     link(rel='stylesheet', href='/assets/app.css')
   body
     #main(data-initial-state=JSON.stringify(initialState))
